--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "amandawallis/capybara",
+    "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
             "CapyView\\": "CapyView",
